@@ -62,7 +62,9 @@
                         <configuration>
                             <argLine>--add-opens java.base/java.nio=ALL-UNNAMED --add-opens
                                 java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens
-                                java.base/java.time=ALL-UNNAMED
+                                java.base/java.time=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens
+                                java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens
+                                java.base/jdk.internal.misc=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED
                             </argLine>
                         </configuration>
                     </plugin>
